fix fact card scroll animation (remove overflow:hidden)

--- a/src/sass/blocks/_facts.scss
+++ b/src/sass/blocks/_facts.scss
@@ -4,7 +4,9 @@
   background: #EBEEF9;
   padding: 120px 0;
   margin-bottom: 42px;
-  overflow: hidden;
+  @include Screen-992 {
+    overflow: hidden;
+  }
   @include Screen-576 {
     padding: 32px 0;
     margin-bottom: 44px;
@@ -33,6 +35,18 @@
     width: 100%;
     margin-right: 20px;
     will-change: transform;
+    &:nth-child(2) {
+      animation: scrollFirstFact linear both;
+      animation-timeline: view(block);
+      animation-range: cover 20 contain 100;
+      view-timeline-inset: 5%;
+    }
+    &:nth-child(3) {
+      animation: scrollSecondFact linear both;
+      animation-timeline: view(block);
+      animation-range: cover 20 contain 100;
+      view-timeline-inset: 5%;
+    }
     @include Screen-992 {
       height: 353px;
     }
@@ -44,16 +58,6 @@
       flex-direction: column;
       justify-content: space-between;
     }
-    &:nth-child(2) {
-      animation: scrollFirstFact linear both;
-      animation-timeline: view(block);
-      animation-range: contain 0 contain 100;
-    }
-    &:nth-child(3) {
-      animation: scrollSecondFact linear both;
-      animation-timeline: view(block);
-      animation-range: contain 0 contain 100;
-    }
     &__number {
       color:  #111;
       font-size: 64px;
@@ -61,6 +65,9 @@
       line-height: 135%; 
       letter-spacing: -0.32px;
       margin-bottom: 154px;
+      @include Screen-1200 {
+        margin-bottom: 114px;
+      }
       @include Screen-992 {
         font-size: 48px;
         margin-bottom: 84px;
@@ -121,21 +128,22 @@
 
 @keyframes scrollFirstFact {
   from {
-    transform: translateY(0)
+    transform: translateY(0);
   }
 
   to {
-    transform: translateY(50px)
+    transform: translateY(50px);
   }
 }
 
 
 @keyframes scrollSecondFact {
   from {
-    transform: translateY(0)
+    transform: translateY(0);
   }
 
   to {
-    transform: translateY(100px)
+    transform: translateY(100px);
+
   }
 }
